# worpen

./: .gitignore  App.tsx  CHANGELOG.md  COMMENTS_AND_RAW_RESPONSES.md  CONTRIBUTING.md  CUSTOM_OPERATIONS_GUIDE.md  DYNAMIC_ROUTES_COMPLETE_GUIDE.md  DYNAMIC_ROUTES_GUIDE.md  LICENSE  README.md  REDIS_OPERATIONS_GUIDE.md  ROADMAP.md  ROUTE_SCHEMA_VALIDATION.md  SECURITY.md  SQL_OPERATIONS_GUIDE.md  WEBSOCKET_GUIDE.md  WEBSOCKET_QUICKREF.md  YAML_STATUS.md  advanced_stress_test.yaml  advanced_test.yaml  api.ts  array_processing_test.yaml  calc_route.json  calculator.html  complex_test.yaml  constants.ts  games.html  hello_route.json  index.html  medium_stress_test.yaml  metadata.json  nested_test.yaml  package-lock.json  package.json  sequential_test.yaml  simple_stress_test.yaml  tailwind.config.js  test_all_yaml.py  test_route.json  test_route.yaml  (+6 more)
backend/: .env  COMMIT_MESSAGE.md  COMMIT_MESSAGE_PHASE2_DAY5-6.md  Cargo.toml  EXAMPLE_ROUTES.md  EXPRESSION_GUIDE.md  PHASE1_SUMMARY.md  PHASE2_DAY5-6_SUMMARY.md  PHASE3_DAY13_SUMMARY.md  PHASE3_DAY14_SUMMARY.md  PHASE3_DAY15_SUMMARY.md  PHASE4_DAY16_SUMMARY.md  README.md  api_demo_with_comments.json  demo.html  demo_route.json  full_benchmark.json  game_action_api.json  game_simulator.json  hello_test.json  helper_functions_demo.json  html_demo_with_comments.json  html_test.json  loop_break_continue_demo.json  loop_metadata_demo.json  loop_nested_demo.json  loop_until_demo.json  loop_while_demo.json  order_create_named_params.json  performance_demo.json  physics_api.json  physics_api_final.json  physics_api_simple.json  physics_api_v2.json  physics_game.json  redis_example.yaml  register_benchmark.py  register_demo.py  register_game_sim.py  register_helpers_demo.py  (+26 more)
backend/crates/api/: Cargo.toml
backend/crates/api/src/: apidoc.rs  banner.rs  main.rs
backend/crates/api/src/dtos/: mod.rs
backend/crates/api/src/handlers/: automation.rs  dashboard.rs  docker.rs  dynamic_fallback.rs  dynamic_routes.rs  dynamic_routes_yaml.rs  dynamic_ws.rs  fleet.rs  incident.rs  logs.rs  mod.rs  pipelines.rs  terminal.rs  ws.rs
backend/crates/api/src/state/: mod.rs
backend/crates/core/: Cargo.toml
backend/crates/core/benches/: comprehensive_benchmark.rs  parse_benchmark.rs
backend/crates/core/src/: helpers.rs  lib.rs  loops.rs  sql_params.rs  telemetry.rs  validation.rs
backend/crates/core/src/compiler/: lowerer.rs  mod.rs  symbol_table.rs
backend/crates/core/src/domain/: agent.rs  mod.rs  telemetry.rs
backend/crates/core/src/expression/: ast.rs  evaluator.rs  filters.rs  functions.rs  mod.rs  parser.rs  template.rs  tokenizer.rs
backend/crates/core/src/helpers/: common.rs  encoding.rs  mod.rs  security.rs  time.rs
backend/crates/core/src/parsers/: detector.rs  mod.rs  route_parser.rs  yaml_normalizer.rs
backend/crates/core/src/ports/: mod.rs  repository.rs
backend/crates/core/src/services/: agent_service.rs  automation.rs  dashboard.rs  docker.rs  dynamic_routes.rs  dynamic_routes_extended.rs  incident.rs  mod.rs  pipelines.rs
backend/crates/core/src/services/dynamic_routes/: cache.rs  date.rs  execution.rs  io.rs  json.rs  math.rs  mod.rs  service.rs  string.rs  utils.rs
backend/crates/core/src/vm/: instructions.rs  machine.rs  memory.rs  mod.rs
backend/crates/core/src/websocket/: manager.rs  mod.rs
backend/crates/core/tests/: dynamic_route_cache_test.rs  e2e_yaml_expressions.rs  error_handling_tests.rs  integration_api_tests.rs  integration_expression_templates.rs  integration_schema_validation.rs  integration_yaml_routes.rs  vm_redis_test.rs  vm_sql_test.rs  vm_test.rs  vm_websocket_test.rs
backend/crates/infra/: Cargo.toml
backend/crates/infra/src/: db.rs  lib.rs
backend/crates/infra/src/adapters/: in_memory_agent_repository.rs  mod.rs  sqlite_agent_repository.rs
backend/crates/infra/src/repositories/: mod.rs  sqlite_automation.rs  sqlite_incident.rs
backend/tools/: Cargo.toml  README.md  json_to_yaml.rs
components/: AIGeneratorModal.tsx  CommandPalette.tsx  CopilotSidebar.tsx  InteractiveTerminal.tsx  LeftSidebar.tsx  LiveLogs.tsx  NotificationPanel.tsx  NotificationSystem.tsx  PageTransition.tsx  RightSidebar.tsx  StatsChart.tsx  SyntaxHighlighter.tsx  TerminalFrame.tsx
documentation/: 01-introduction.md  02-basic-structure.md  03-variables-basics.md  04-control-flow.md  05-loops.md  06-functions.md  07-math-operations.md  08-string-operations.md  09-date-operations.md  10-error-handling.md  (+12 more)
(+98 files in other folders)
