[package]
name = "worpen-convert"
version = "1.0.0"
edition = "2021"
authors = ["Worpen Team"]
description = "CLI tool for converting dynamic routes between JSON and YAML formats"
license = "MIT"

[[bin]]
name = "worpen-convert"
path = "json_to_yaml.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
colored = "2.1"
