[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
infra = { path = "../infra" }
proto = { path = "../proto" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.19.0", features = ["serde"] }
serde_json = "1.0.145"
