[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
proto = { path = "../proto" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.10"
