[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
proto = { path = "../proto" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.10"
jsonschema = "0.18"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parse_benchmark"
harness = false

[[bench]]
name = "comprehensive_benchmark"
harness = false
