[package]
name = "worpen-core"
version = "0.1.0"
edition = "2021"
authors = ["Matin Sanei <saneimatin33@gmail.com>"]
description = "Core domain logic and VM for Worpen Dynamic API Engine"
license = "MIT"
repository = "https://github.com/matinsanei/worpen"
keywords = ["dynamic-api", "vm", "bytecode", "websocket", "runtime"]
categories = ["web-programming", "api-bindings"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
proto = { path = "../proto" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.10"
jsonschema = "0.18"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.21.3"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.18"
tokio-tungstenite = "0.24"
dashmap = "6.1"

[dev-dependencies]
criterion = "0.5"
tokio-tungstenite = "0.24"

[[bench]]
name = "parse_benchmark"
harness = false

[[bench]]
name = "comprehensive_benchmark"
harness = false
