[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
core = { path = "../core" }
dashmap = "6.1.0"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
uuid = "1.19.0"
